Forward ShortcutOverride in QQuickWidget

This is now essential since otherwise these events are simply lost.

Amends 0dbc575c1a8359534761167a5f5f1e29abedd51d

Task-number: QTBUG-60988
Change-Id: Ib1d99d8fcd5bb92c9b52977796f2910f0fe71c48
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>